[gd_scene load_steps=5 format=3 uid="uid://b6jywstaf8cf4"]

[ext_resource type="Script" uid="uid://cqsla2ne6ek8c" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://c8npqlgeyy3xa" path="res://arrow3d/arrow_3d.tscn" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dwv6qfmupuvqj" path="res://wall.tscn" id="3_h2yge"]

[sub_resource type="Theme" id="Theme_h2yge"]
default_font_size = 48

[node name="Main" type="Node3D"]
script = ExtResource("1_ig7tw")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 5, 15)
omni_range = 50.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)
shadow_enabled = true
sky_mode = 1

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, 0.5, -0.5, 0, 0, 0)
shadow_enabled = true
sky_mode = 1

[node name="DropContainer" type="Node3D" parent="."]

[node name="왼쪽패널" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_h2yge")

[node name="LabelDrops" type="Label" parent="왼쪽패널"]
layout_mode = 2

[node name="LabelPerformance" type="Label" parent="왼쪽패널"]
layout_mode = 2

[node name="충돌횟수보이기" type="Button" parent="왼쪽패널"]
layout_mode = 2
text = "충돌횟수보이기"

[node name="WallContainer" type="Node3D" parent="."]

[node name="WallBottom" parent="WallContainer" instance=ExtResource("3_h2yge")]

[node name="WallNorth" parent="WallContainer" instance=ExtResource("3_h2yge")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 15, 15, 0)

[node name="WallSouth" parent="WallContainer" instance=ExtResource("3_h2yge")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 15, 15, 30)

[node name="WallWest" parent="WallContainer" instance=ExtResource("3_h2yge")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 15, 15)

[node name="WallEast" parent="WallContainer" instance=ExtResource("3_h2yge")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 20, 15, 15)

[node name="WallTop" parent="WallContainer" instance=ExtResource("3_h2yge")]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0)

[node name="BarContainer" type="Node3D" parent="."]

[node name="Timer공추가" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="BallEndCounterContainer" type="Node3D" parent="."]

[node name="Arrow3D" parent="." instance=ExtResource("3_1bvp3")]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0)

[connection signal="pressed" from="왼쪽패널/충돌횟수보이기" to="." method="_on_충돌횟수보이기_pressed"]
[connection signal="timeout" from="Timer공추가" to="." method="_on_timer공추가_timeout"]
